[gd_scene load_steps=12 format=3 uid="uid://7vc1up7aeg00"]

[ext_resource type="Script" path="res://scripts/Truck.gd" id="1_syro1"]
[ext_resource type="Texture2D" uid="uid://01hda4khbdak" path="res://resources/textures/flat/smoke1.atlastex" id="2_squyc"]
[ext_resource type="Texture2D" uid="uid://dyd7lnjfl3c0g" path="res://resources/textures/flat/water_particle.atlastex" id="3_6gbog"]
[ext_resource type="Texture2D" uid="uid://8hj6tfajy5ol" path="res://resources/textures/body/truck.atlastex" id="3_6nfis"]
[ext_resource type="Texture2D" uid="uid://bdgdtnjurudml" path="res://resources/textures/body/catapult.atlastex" id="5_5q3hj"]
[ext_resource type="Texture2D" uid="uid://b4u3k7papt7e1" path="res://resources/textures/flat/water_supply.atlastex" id="5_op48l"]
[ext_resource type="Texture2D" uid="uid://cd2x0sn5kuddd" path="res://resources/textures/ui/marker.atlastex" id="7_08bwq"]

[sub_resource type="CircleShape2D" id="CircleShape2D_8100f"]
radius = 34.0

[sub_resource type="Gradient" id="Gradient_e1krs"]
colors = PackedColorArray(0.741385, 0.741385, 0.741385, 1, 0.593134, 0.593134, 0.593134, 0)

[sub_resource type="Curve" id="Curve_n53i2"]
_data = [Vector2(0.00344828, 0.509777), 0.0, 1.62607, 0, 0, Vector2(0.486207, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.300978), -1.66737, 0.0, 0, 0]
point_count = 3

[sub_resource type="Gradient" id="Gradient_s0lnm"]
offsets = PackedFloat32Array(0, 0.687023, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0)

[node name="Truck" type="CharacterBody2D"]
collision_layer = 5
collision_mask = 5
motion_mode = 1
script = ExtResource("1_syro1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_8100f")

[node name="LowScanArea2D" type="Area2D" parent="CollisionShape2D"]
unique_name_in_owner = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionShape2D/LowScanArea2D"]
shape = SubResource("CircleShape2D_8100f")

[node name="DriftParticles" type="CPUParticles2D" parent="."]
position = Vector2(-32, 0)
amount = 12
texture = ExtResource("2_squyc")
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 70.0
initial_velocity_max = 70.0
damping_min = 95.484
damping_max = 95.484
angle_max = 360.0
scale_amount_max = 1.2
color_ramp = SubResource("Gradient_e1krs")

[node name="BodySprite" type="Sprite2D" parent="."]
self_modulate = Color(1, 0.901961, 0.866667, 1)
z_index = 3
texture = ExtResource("3_6nfis")

[node name="WaterSupply1" type="Sprite2D" parent="BodySprite"]
unique_name_in_owner = true
self_modulate = Color(0.65098, 0.65098, 0.65098, 1)
position = Vector2(-6, 0)
texture = ExtResource("5_op48l")

[node name="WaterSupply2" type="Sprite2D" parent="BodySprite"]
unique_name_in_owner = true
modulate = Color(0.835294, 0.835294, 0.835294, 1)
position = Vector2(-6, 0)
rotation = 1.309
texture = ExtResource("5_op48l")

[node name="Catapult" type="Sprite2D" parent="BodySprite"]
unique_name_in_owner = true
self_modulate = Color(1, 0.901961, 0.866667, 1)
position = Vector2(-6.335, 0)
texture = ExtResource("5_5q3hj")
offset = Vector2(0, 27)

[node name="SplashParticles" type="CPUParticles2D" parent="BodySprite"]
amount = 1
lifetime = 0.3
explosiveness = 0.53
texture = ExtResource("3_6gbog")
emission_shape = 2
emission_sphere_radius = 20.0
direction = Vector2(-1, 0)
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 70.0
initial_velocity_max = 70.0
damping_min = 100.0
damping_max = 100.0
angle_max = 360.0
scale_amount_curve = SubResource("Curve_n53i2")

[node name="SplashParticlesBurst" type="CPUParticles2D" parent="BodySprite"]
unique_name_in_owner = true
emitting = false
amount = 5
lifetime = 0.4
one_shot = true
explosiveness = 0.96
texture = ExtResource("3_6gbog")
emission_shape = 2
emission_sphere_radius = 20.0
direction = Vector2(-1, 0)
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 147.42
initial_velocity_max = 147.42
damping_min = 100.0
damping_max = 100.0
angle_max = 360.0
scale_amount_min = 2.0
scale_amount_max = 2.0
scale_amount_curve = SubResource("Curve_n53i2")
color_ramp = SubResource("Gradient_s0lnm")

[node name="ShadowSprite" type="Sprite2D" parent="BodySprite"]
unique_name_in_owner = true
modulate = Color(0, 0, 0, 0.129412)
show_behind_parent = true
scale = Vector2(1.1, 1.1)
texture = ExtResource("3_6nfis")

[node name="Arrow" type="Sprite2D" parent="."]
unique_name_in_owner = true
modulate = Color(0.443137, 0.74902, 0.196078, 0.576471)
z_index = 20
z_as_relative = false
texture = ExtResource("7_08bwq")
offset = Vector2(86, 0)
